tektoSync-Config/overlays/dev/catalog-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: catalog
  namespace: dev-sandbox
spec:
  host: catalog-dev-sandbox.apps-crc.testing
  port:
    targetPort: 7072
  to:
    kind: Service
    name: catalog
    weight: 100
  wildcardPolicy: None
