tektoSync-Config/overlays/dev/inventory-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: inventory
  namespace: dev-sandbox
spec:
  host: inventory-dev-sandbox.apps-crc.testing
  port:
    targetPort: 8080
  to:
    kind: Service
    name: inventory
    weight: 100
  wildcardPolicy: None
