tektoSync-Config/overlays/dev/order-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: order
  namespace: dev-sandbox
spec:
  host: order-dev-sandbox.apps-crc.testing
  port:
    targetPort: 3000
  to:
    kind: Service
    name: order
    weight: 100
  wildcardPolicy: None
