tektoSync-Config/overlays/dev/payment-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: payment
  namespace: dev-sandbox
spec:
  host: payment-dev-sandbox.apps-crc.testing
  port:
    targetPort: 3001
  to:
    kind: Service
    name: payment
    weight: 100
  wildcardPolicy: None
